tg-1489 Fix texto "Cancelar turno" queda fuera del boton en el popup
(cherry picked from commit 1949aa6d0fd6a2a133fc89e9d6df737ebc0e1f58)

--- a/front-end/webapp/src/app/modules/turnos/dialogs/appointment/appointment.component.html
+++ b/front-end/webapp/src/app/modules/turnos/dialogs/appointment/appointment.component.html
@@ -1,40 +1,44 @@
-<mat-list>
-	<mat-list-item id="patient">
-		<mat-icon fontSet="material-icons-outlined" color="primary" mat-list-icon [inline]="true">person</mat-icon>
-		<div fxLayout="column">
-			<strong> {{data.patient.fullName}} - {{data.patient.identificationNumber}} </strong>
-			<span class="patient-info"> Obra social: {{data.medicalCoverage?.name}} /
-				{{data.medicalCoverage.affiliateNumber}}</span>
-			<span class="patient-info">Teléfono: {{data.patient.phoneNumber}}</span>
-			<a *hasRole="['ESPECIALISTA_MEDICO','PROFESIONAL_DE_SALUD']" [href]="'/institucion/' + institutionId + '/ambulatoria/paciente/' + data?.patient?.id">Ver historia
-				clínica</a>
+<div mat-dialog-content>
+	<mat-list>
+		<mat-list-item id="patient">
+			<mat-icon fontSet="material-icons-outlined" color="primary" mat-list-icon [inline]="true">person
+			</mat-icon>
+			<div fxLayout="column">
+				<strong> {{data.patient.fullName}} - {{data.patient.identificationNumber}} </strong>
+				<span class="patient-info"> Obra social: {{data.medicalCoverage?.name}} /
+					{{data.medicalCoverage.affiliateNumber}}</span>
+				<span class="patient-info">Teléfono: {{data.patient.phoneNumber}}</span>
+				<a *hasRole="['ESPECIALISTA_MEDICO','PROFESIONAL_DE_SALUD']"
+				   [href]="'/institucion/' + institutionId + '/ambulatoria/paciente/' + data?.patient?.id">Ver
+					historia clínica</a>
+			</div>
+		</mat-list-item>
+	</mat-list>
+	<br>
+	<span class="asing-appointment">Turno Asignado</span>
+	<mat-list class="appointment-information">
+		<div>
+			<mat-list-item id="full-date">
+				<mat-icon fontSet="material-icons-outlined" color="primary" mat-list-icon [inline]="true">calendar_today
+				</mat-icon>
+				<strong> {{data.date | date:"fullDate" }}</strong>
+			</mat-list-item>
+			<mat-list-item id="hour">
+				<mat-icon fontSet="material-icons-outlined" color="primary" mat-list-icon [inline]="true">access_time
+				</mat-icon>
+				<strong> {{data.date | date:"HH:mm"}} hs</strong>
+			</mat-list-item>
 		</div>
-	</mat-list-item>
-</mat-list>
-<br>
-<span class="asing-appointment">Turno Asignado</span>
-<mat-list class="appointment-information">
-	<div>
-		<mat-list-item id="full-date">
-			<mat-icon fontSet="material-icons-outlined" color="primary" mat-list-icon [inline]="true">calendar_today
-			</mat-icon>
-			<strong> {{data.date | date:"fullDate" }}</strong>
-		</mat-list-item>
-		<mat-list-item id="hour">
-			<mat-icon fontSet="material-icons-outlined" color="primary" mat-list-icon [inline]="true">access_time
-			</mat-icon>
-			<strong> {{data.date | date:"HH:mm"}} hs</strong>
-		</mat-list-item>
-	</div>
-</mat-list>
+	</mat-list>
+</div>
 
-<div class="buttons">
+<mat-dialog-actions align="end">
 	<!--<button mat-flat-button color="primary" id="create-overturn" name="create-overturn" fxFlexFill.xs>
 		<span class="uppercase" [translate]="'turnos.overturns.CREATE'"></span>
 	</button>
 	-->
-	<button mat-flat-button color="warn" id="cancel-appointment" name="cancel-appointment" (click)="cancelAppointment()">
+	<button mat-flat-button color="warn" id="cancel-appointment" name="cancel-appointment"
+			(click)="cancelAppointment()">
 		<span class="uppercase" [translate]="'turnos.cancel.TITLE'"></span>
 	</button>
-
-</div>
+</mat-dialog-actions>
