tg-1515 [FE] Deshabilita edicion de duracion de turnos
(cherry picked from commit 50cb615a8f320a62fe03282e07baf8a8c49bcad7)

--- a/front-end/webapp/src/app/modules/turnos/routes/new-agenda/new-agenda.component.html
+++ b/front-end/webapp/src/app/modules/turnos/routes/new-agenda/new-agenda.component.html
@@ -124,7 +124,7 @@
 					<mat-form-field appearance="outline">
 						<mat-select id="appointmentDuration" name="appointmentDuration"
 							formControlName="appointmentDuration" placeholder="{{'pacientes.form.SELECT' | translate}}"
-							(selectionChange)="setAppointmentDurationToAgendaService()">
+							(selectionChange)="newAgendaService.setAppointmentDuration(form.getRawValue().appointmentDuration)">
 							<mat-option *ngFor="let appointmentDuration of appointmentDurations"
 								[value]="appointmentDuration.id">
 								{{appointmentDuration.description}}
@@ -167,7 +167,7 @@
 				<mwl-calendar-week-view [viewDate]="newAgendaService.getViewDate()"
 					[events]="newAgendaService.getEvents()" [hourSegmentTemplate]="weekViewHourSegmentTemplate"
 					[headerTemplate]="headerTemplate" [dayStartHour]="openingTime" [dayEndHour]="closingTime"
-										[hourSegments]="newAgendaService.getMinutesInHour() / form.value.appointmentDuration"
+										[hourSegments]="newAgendaService.getMinutesInHour() / form.getRawValue().appointmentDuration"
 										[weekStartsOn]="newAgendaService.getWeekStartsOn()">
 				</mwl-calendar-week-view>
 			</section>
