tg-1521 [FE] Contemplar error/respuesta vacia Renaper Obras Sociales
(cherry picked from commit 451a2e9656fc5f4c50b089a5e75c079f078f100e)

--- a/front-end/webapp/src/app/modules/turnos/dialogs/new-appointment/new-appointment.component.html
+++ b/front-end/webapp/src/app/modules/turnos/dialogs/new-appointment/new-appointment.component.html
@@ -68,8 +68,10 @@
 						</div>
 					</mat-list-item>
 				</mat-list>
-
-				<form [formGroup]="formMedicalCoverage">
+				<div fxLayout="row" fxLayoutAlign="space-around center">
+					<mat-spinner *ngIf="!healtInsuranceOptions.length"></mat-spinner>
+				</div>
+				<form *ngIf="healtInsuranceOptions.length" [formGroup]="formMedicalCoverage">
 					<div fxLayout="row wrap" fxLayoutGap="10px">
 						<mat-form-field appearance="outline">
 							<mat-label>Obra Social</mat-label>
