--- a/front-end/webapp/src/app/modules/camas/routes/home/home.component.scss
+++ b/front-end/webapp/src/app/modules/camas/routes/home/home.component.scss
@@ -1,5 +1,3 @@
-@import "../../../../../assets/styles/variables";
-
 .panel-filtro{
     min-width: 30%;
     background-color: #f3efef8e;
@@ -16,31 +14,7 @@ section.beds {
     margin-top: 0px;
 }
 
-.mat-raised-button{
-    color: white;
-    margin: 5px;
-    padding: 0 5px;
-    background-color: $error-color;
-}
-
-.free{
-    background-color: $success-color;
-    text-decoration: underline;
-}
-
-.mat-card .mat-divider {
-    margin: 10px 0px 10px 0px;
-}
-
-#bed-managment-card {
+#bed-management-card {
     min-width: 60%;
     width: 100%;
-}
-
-#speciality-title {
-    margin: 0px;
-}
-
-#speciality-block {
-    margin: 5px 0px 5px 0px;
 }
