--- a/front-end/webapp/src/app/modules/institucion/components/bed-mapping/bed-mapping.component.html
+++ b/front-end/webapp/src/app/modules/institucion/components/bed-mapping/bed-mapping.component.html
@@ -1,10 +1,10 @@
 <div fxLayout="column" *ngFor="let sector of bedManagementList">
     <div id="title">
-        <h2 class="page-title">{{sector.sectorDescription}}</h2>
+        <h2 class="mat-h2 page-title">{{sector.sectorDescription}}</h2>
     </div>
     <div id="speciality-block" fxLayout="column" *ngFor="let specialty of sector.specialty">
         <div id="title">
-            <h2 id="speciality-title">{{specialty.specialtyName}}</h2>
+            <h2 class="mat-h2" id="speciality-title">{{specialty.specialtyName}}</h2>
         </div>
         <div fxLayout="row wrap">
             <div *ngFor="let bed of specialty.beds">
