--- a/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/routes/agenda/agenda.component.html
+++ b/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/routes/agenda/agenda.component.html
@@ -49,7 +49,7 @@
 								[hourSegments]="newAgendaService.getMinutesInHour() / newAgendaService.getAppointmentDuration()"
 								[weekStartsOn]="newAgendaService.getWeekStartsOn()"
 								(beforeViewRender)="loadCalendar($event)" (hourSegmentClicked)="onClickedSegment($event)"
-								(eventClicked)="viewAppointment($event)"
+								(eventClicked)="viewAppointment($event.event)"
 		>
 		</mwl-calendar-week-view>
 	</ng-template>
