--- a/front-end/webapp/src/app/modules/turnos/dialogs/appointment/appointment.component.scss
+++ b/front-end/webapp/src/app/modules/turnos/dialogs/appointment/appointment.component.scss
@@ -1,20 +1,24 @@
 @import "../../../../../assets/styles/mixins.scss";
 
-.appointment-information .mat-list-item {
+.appointment-information {
 	height: auto;
-  }
+}
 
-  .asing-appointment {
+.assigned-appointment {
 	padding: 20px;
 	color: #545454;
-	font-family: Roboto;
-	font-size: 12px;
 	line-height: 14px;
-  }
+}
 
-  .patient-info{
-	  color: #545454;
-	  font-family: Roboto;
-	  font-size: 14px;
-      line-height: 17px;
-  }
+.patient-info {
+	color: #545454;
+	line-height: 17px;
+}
+
+mat-icon {
+	font-size: 20px;
+}
+
+section {
+	margin: 0;
+}
