tg-1504 agregar boton de asignar cama en el detalle de camas

--- a/front-end/webapp/src/app/modules/historia-clinica/dialogs/bed-assignment/bed-assignment.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/dialogs/bed-assignment/bed-assignment.component.html
@@ -28,7 +28,7 @@
             <div class="spinner" *ngIf="!bedManagementList">
                 <mat-spinner color="primary"></mat-spinner>
             </div>
-            <app-bed-detail [bedId]="selectedBed"></app-bed-detail>
+            <app-bed-detail [bedId]="selectedBed" [bedAssign]="true" (assignedBed)="onAssignedBed($event)"></app-bed-detail>
         </div>
 
     </div>
