--- a/front-end/webapp/src/app/modules/institucion/components/bed-detail/bed-detail.component.html
+++ b/front-end/webapp/src/app/modules/institucion/components/bed-detail/bed-detail.component.html
@@ -88,5 +88,11 @@
                 </div>
             </mat-list-item>
         </mat-list>
+
+        <div fxLayout="row" fxLayoutAlign="end">
+            <button mat-raised-button color="primary" (click)="assignBed()" *ngIf="bedAssign && bedInfo">
+                <span [translate]="'internaciones.new-internment.BED_ASSIGNMENT_BUTTON'"></span>
+            </button>
+        </div>
     </mat-card>
 </section>
