tg-1572 agregados procedimientos a la generacion de PDFs

--- a/back-end/hospital-api/src/main/resources/templates/fragments/general.html
+++ b/back-end/hospital-api/src/main/resources/templates/fragments/general.html
@@ -36,7 +36,7 @@
 
     <!-- Diagnóstico principal -->
     <div th:fragment="mainDiagnosis (message)">
-        <h3 th:text="#{${message}}"></h3>
+        <h3 th:text="${message}"></h3>
         <div class="row" th:if="${mainDiagnosis == null}">
             <dl class="lista" >
                 <dd><p >Sin cambios registrados</p></dd>
@@ -55,7 +55,7 @@
 
     <!-- Otros Diagnósticos/enfermedades -->
     <div th:fragment="diagnosis (message)">
-        <h3 th:text="#{${message}}"></h3>
+        <h3 th:text="${message}"></h3>
         <div class="row" th:if="${#lists.isEmpty(diagnosis)}">
             <dl class="lista" >
                 <dd><p >Sin cambios registrados</p></dd>
