--- a/back-end/hospital-api/src/main/resources/templates/anamnesis-minsal.html
+++ b/back-end/hospital-api/src/main/resources/templates/anamnesis-minsal.html
@@ -10,6 +10,7 @@
 		<div th:replace="fragments/general.html :: personalData(patientType='Paciente')"></div>
 		<div th:replace="fragments/general.html :: mainDiagnosis(message='Diagnóstico principal')"></div>
 		<div th:replace="fragments/general.html :: diagnosis(message='Diagnósticos')"></div>
+		<div th:replace="fragments/general.html :: procedures(message='Procedimientos')"></div>
 		<div th:replace="fragments/general.html :: antropometicData"></div>
 		<div th:replace="fragments/general.html :: personalHistory"></div>
 		<div th:replace="fragments/general.html :: familyHistory"></div>
