--- a/back-end/hospital-api/src/main/resources/templates/evolutionnote-minsal.html
+++ b/back-end/hospital-api/src/main/resources/templates/evolutionnote-minsal.html
@@ -9,6 +9,7 @@
 	<div th:replace="fragments/general.html :: personalData(patientType='Paciente')"></div>
 	<div th:replace="fragments/general.html :: mainDiagnosis(message='Diagnóstico principal')"></div>
 	<div th:replace="fragments/general.html :: diagnosis(message='Diagnósticos')"></div>
+	<div th:replace="fragments/general.html :: procedures(message='Procedimientos')"></div>
 	<div th:replace="fragments/general.html :: antropometicData"></div>
 	<div th:replace="fragments/general.html :: allergies"></div>
 	<div th:replace="fragments/general.html :: immunizations"></div>
