tg-1560 [P2] Corrige Diagnosticos extensos fuera de Card

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.scss
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.scss
@@ -1,1 +1,8 @@
+::ng-deep .mat-list .mat-list-item .mat-line{
+	Word-wrap: break-Word;
+   white-space: pre-wrap;
+}
 
+::ng-deep  .mat-list .mat-list-item{
+	height:initial!important;
+}
