--- a/front-end/webapp/src/app/modules/core/dialogs/confirm-dialog/confirm-dialog.component.html
+++ b/front-end/webapp/src/app/modules/core/dialogs/confirm-dialog/confirm-dialog.component.html
@@ -3,8 +3,9 @@
 	<div innerHTML="{{ data.content | translate}}"></div>
 </div>
 <div mat-dialog-actions align="end">
-	<button mat-button [mat-dialog-close]=false class="uppercase" translate="buttons.CANCEL" id="cancel-button"
-		name="cancel-button"></button>
+	<button mat-button [mat-dialog-close]=false class="uppercase" id="cancel-button" name="cancel-button">
+		{{(data.cancelButtonLabel? data.cancelButtonLabel : 'buttons.CANCEL') | translate}}</button>
 	<button mat-raised-button [mat-dialog-close]=true cdkFocusInitial [color]='okBottonColor' class="uppercase"
-		id="okButton-button" name="okButton-button">{{data.okButtonLabel | translate}}</button>
+		id="okButton-button" name="okButton-button">
+		{{(data.okButtonLabel? data.okButtonLabel : 'buttons.CONFIRM' ) | translate}}</button>
 </div>
