tg-1585 ver camas vacias cuando se abre popup de asignar cama en nueva internacion

--- a/front-end/webapp/src/app/modules/historia-clinica/dialogs/bed-assignment/bed-assignment.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/dialogs/bed-assignment/bed-assignment.component.html
@@ -14,7 +14,7 @@
                             <mat-card-subtitle>
                                 <span *ngIf="bedManagementList" id="bed_id">Resultado: {{bedsAmount}} camas</span>
                             </mat-card-subtitle>
-                            <app-bed-filters></app-bed-filters>
+                            <app-bed-filters [filled]="filled"></app-bed-filters>
                         </div>
                         <section class="beds" id="mapeo" *ngIf="bedManagementList && bedManagementList.length">
                             <app-bed-mapping [bedManagementList]="bedManagementList" (selectedBed)="onSelectBed($event)"></app-bed-mapping>
