--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -6,12 +6,14 @@
 	<section id="content" fxLayout="column" fxLayoutGap="20px">
 		<app-patient-card [patient]="patient$ | async">
 			<div horizontal-content>
-				<button *hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']"
-						id="nueva_consulta"
-				        mat-flat-button color="primary"
-				        (click)="goToNuevaConsulta()">
-					{{ 'ambulatoria.paciente.card.buttons.NUEVA_CONSULTA' | translate | uppercase }}
-				</button>
+				<ng-container *ngIf="hasConfirmedAppointment">
+					<button *hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']"
+							id="nueva_consulta"
+							mat-flat-button color="primary"
+							(click)="goToNuevaConsulta()">
+						{{ 'ambulatoria.paciente.card.buttons.NUEVA_CONSULTA' | translate | uppercase }}
+					</button>
+				</ng-container>
 			</div>
 		</app-patient-card>
 
@@ -33,7 +35,7 @@
 							<span>{{ 'ambulatoria.paciente.vacunas.TAB_LABEL' | translate | uppercase }}</span>
 						</ng-template>
 						<ng-template matTabContent>
-							<app-vacunas></app-vacunas>
+							<app-vacunas [hasConfirmedAppointment]="hasConfirmedAppointment"></app-vacunas>
 						</ng-template>
 					</mat-tab>
 					<mat-tab id="tab_problemas">
